--- a/Werewolves/Werewolves/Main.storyboard
+++ b/Werewolves/Werewolves/Main.storyboard
@@ -1112,23 +1112,8 @@
                                     <segue destination="JOf-pj-xuq" kind="push" identifier="PlayerListSegue" id="5DK-1S-1nA"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Im-MT-Vca">
-                                <rect key="frame" x="0.0" y="66" width="320" height="60"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="320" id="gFS-iz-XBb"/>
-                                    <constraint firstAttribute="height" constant="60" id="yCM-zt-goz"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                <state key="normal" title="Browse Nearby Device">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="browseForDevices:" destination="PSY-2I-bdp" eventType="touchDown" id="4Aj-bZ-2Od"/>
-                                </connections>
-                            </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="lJR-9i-bCx">
-                                <rect key="frame" x="0.0" y="123" width="320" height="395"/>
+                                <rect key="frame" x="0.0" y="66" width="320" height="452"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -1138,15 +1123,12 @@
                         </subviews>
                         <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="4Im-MT-Vca" firstAttribute="leading" secondItem="d5P-bB-5mv" secondAttribute="leading" id="Kwr-n6-lex"/>
                             <constraint firstItem="RCd-bY-X6t" firstAttribute="top" secondItem="lJR-9i-bCx" secondAttribute="bottom" id="Qvc-rQ-MEq"/>
-                            <constraint firstAttribute="trailing" secondItem="4Im-MT-Vca" secondAttribute="trailing" id="ae7-gd-Nnv"/>
                             <constraint firstItem="hj9-b1-e4G" firstAttribute="top" secondItem="RCd-bY-X6t" secondAttribute="bottom" id="bNN-Qg-H3L"/>
-                            <constraint firstItem="lJR-9i-bCx" firstAttribute="top" secondItem="dJZ-fw-QPg" secondAttribute="bottom" constant="59" id="dHS-s7-dqb"/>
+                            <constraint firstItem="lJR-9i-bCx" firstAttribute="top" secondItem="dJZ-fw-QPg" secondAttribute="bottom" constant="2" id="dHS-s7-dqb"/>
                             <constraint firstAttribute="trailing" secondItem="RCd-bY-X6t" secondAttribute="trailing" id="ejY-bL-uGY"/>
                             <constraint firstItem="lJR-9i-bCx" firstAttribute="leading" secondItem="d5P-bB-5mv" secondAttribute="leading" id="hEZ-dC-QJj"/>
                             <constraint firstAttribute="trailing" secondItem="lJR-9i-bCx" secondAttribute="trailing" id="hfA-6r-14I"/>
-                            <constraint firstItem="4Im-MT-Vca" firstAttribute="top" secondItem="dJZ-fw-QPg" secondAttribute="bottom" constant="2" id="quu-BO-xWF"/>
                             <constraint firstItem="RCd-bY-X6t" firstAttribute="leading" secondItem="d5P-bB-5mv" secondAttribute="leading" id="tLY-jn-1ye"/>
                         </constraints>
                     </view>
@@ -1226,7 +1208,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="ssf-T3-JmC"/>
+        <segue reference="mmU-aD-GOA"/>
         <segue reference="ojg-Qk-98Z"/>
     </inferredMetricsTieBreakers>
 </document>
